New mobs for colossal Dreadful spectral (#1561)